--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="index-title">Regenal Grant Portfolio </h2>
             <article class="portfolio-view" data-category="category">
                 <h1 id="title-portfolio-item">Personal Bio</h1>
-                <a href="" id="data/Article.json"><image class="element" src="image/8.jpg" alt="" id="2"></a>
+                <a href="" id="data/Project.json"><image class="element" src="image/8.jpg" alt="" id="2"></a>
                 <p class="body-portfolio" style= "">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae
                     est. Mauris placerat eleifend leo. </p>
                   </img>
@@ -61,18 +61,18 @@
         &copy; 2016 HeijnenGroup
     </footer>
     <script src="vendor/scripts/page.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="scripts/models/githubToken.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="scripts/app.js"></script>
     <script src="scripts/models/articles.js"></script>
-    <!-- <script src="/scripts/views/newArticle.js"></script> -->
+
     <script src="scripts/models/repo.js"></script>
     <script src="scripts/controller/aboutController.js"></script>
     <script src="scripts/controller/articleController.js"></script>
     <script src="scripts/controller/routes.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
-     <!-- <script src="/scripts/views/repoView.js"></script> -->
-    <script src="scripts/articleView.js"></script>
+
+    <!-- <script src="scripts/articleView.js"></script> -->
 
 </body>
 
