--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <nav class="main-nav">
 <i class="fa fa-bars" aria-hidden="true"></i>
 <ul>
-<li class="tab"data-content="projects"><a href="/projects"><i class="fa fa-home" aria-hidden="true"> Home</i></a></li>
-<li class="tab" data-content="aboutme"><a href="/"><i class="fa fa-user-circle-o" aria-hidden="true"> About</i></a></li>
+<li class="tab"data-content="projects"><a href="/"><i class="fa fa-home" aria-hidden="true"> Home</i></a></li>
+<li class="tab" data-content="aboutme"><a href="/about"><i class="fa fa-user-circle-o" aria-hidden="true"> About</i></a></li>
 <li class="tab" data-content="linkedn"><i class="fa fa-linkedin-square" aria-hidden="true">Linkedn</i></li>
 <li class="tab" data-content="github"><i class="fa fa-github" aria-hidden="true">Github</i></li>
 </ul>
@@ -60,19 +60,16 @@
     <footer>
         &copy; 2016 HeijnenGroup
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <script src="vendor/scripts/page.js"></script>
     <script src="scripts/models/githubToken.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="scripts/app.js"></script>
-    <script src="scripts/models/articles.js"></script>
-
+  <script src="scripts/models/articleView.js"></script>
     <script src="scripts/models/repo.js"></script>
     <script src="scripts/controller/aboutController.js"></script>
     <script src="scripts/controller/articleController.js"></script>
     <script src="scripts/controller/routes.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
-
-    <!-- <script src="scripts/articleView.js"></script> -->
 
 </body>
 
