--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       </section>
         <section id="aboutme" class="tab-content">
-          <h2 class="index-title">Regenal Grant Portfolio </h2>
+          <h2 class="index-title">Regenal Grant</h2>
           <article class="portfolio-view" data-category="category">
             <h1 id="title-portfolio-item">Personal Bio</h1>
             <a href="" id="data/Project.json"><image class="element" src="image/8.jpg" alt="" id="2"></a>
@@ -74,7 +74,7 @@
     <script src="scripts/models/repo.js"></script>
     <script src="scripts/models/githubToken.js"></script>
     <!-- views -->
-  <script src="scripts/views/articleView.js"></script>
+    <script src="scripts/views/articleView.js"></script>
     <script src="scripts/views/repoView.js"></script>
     <!-- controllers -->
     <script src="scripts/controller/aboutController.js"></script>
